# From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  pyrightconfig.json  setup.cfg
analysis/: __init__.py  coverage_analysis.py  plot_bandwidth_vs_update_rate.py  plot_latency_vs_nav_error.py
code/: multi_robot_exploration_sim.py  simulate_bandwidth_vs_update_rate.py  simulate_latency_vs_error.py
config/: comms_qos_profiles.yaml  exploration_scenarios.yaml  robot_params.yaml  sensors.yaml
data/logs/: sim_run_001.bag  sim_run_002.bag
data/maps/: office_map.pgm  office_map.yaml  warehouse_map.pcd
data/scenarios/: scenario_indoor_corridor.yaml  scenario_multi_floor.yaml
docs/: comms_architecture.md  design_overview.md  sensing_pipeline.md
launch/: multi_robot_explore.launch.py  single_robot_nav.launch.py
notebooks/: 01_snr_vs_packet_error_rate.ipynb  02_coverage_vs_bandwidth.ipynb
report/: report.tex
rviz/: comms_overview.rviz  nav_debug.rviz
scripts/: run_multi_robot_explore.sh  run_sim_local_nav.sh
sim/: __init__.py  sim_runner.py
sim/robot_models/: mobile_base.config.yaml
sim/scenarios/: multi_robot_explore_01.yaml
sim/world_models/: office_world.sdf  warehouse_world.sdf
src/comms/: __init__.py  base_station_node.py  edge_client_node.py  link_simulator.py  qos_models.py
src/control/: __init__.py  low_level_interface.cpp  motion_controller.cpp
src/mapping/: __init__.py  costmap_generator.py  occupancy_grid_mapper.py
src/perception/: __init__.py  imu_fusion.py  lidar_preprocess.py  slam_frontend_node.py  vision_frontend.py
src/planning/: __init__.py  global_planner_stub.py  local_planner.py  trajectory_roller.py
urdf/: mobile_base.urdf.xacro  sensor_mount.urdf.xacro
