[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "from-signal-to-system"
version = "0.1.0"
description = "Robotics research: Communications, Sensing, and Navigation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robotics Team", email = "research@example.com"},
]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.5",
    "pyyaml>=5.4",
    "pandas>=1.3",
    "Pillow>=8.3",
    # ROS2 will be installed separately in rosdep
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "sphinx>=4.0",
]

ros = [
    "rclpy",
    "ros2-distro>=0.0.0",
]

perception = [
    "open3d>=0.13.0",
    "scikit-image>=0.18",
    "opencv-python>=4.5",
]

mapping = [
    "scikit-learn>=1.0",
]

[project.urls]
Repository = "https://github.com/TeWei02/From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation"
Documentation = "https://github.com/TeWei02/From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation/docs"

[tool.setuptools]
packages = ["src"]
