[metadata]
name = from-signal-to-system
version = 0.1.0
author = Robotics Team
author_email = research@example.com
description = Robotics research: Communications, sensing, and autonomous navigation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TeWei02/From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation
project_urls =
    Bug Tracker = https://github.com/TeWei02/From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation/issues
    Documentation = https://github.com/TeWei02/From-Signal-to-System-Communications-Sensing-and-Robotic-Navigation/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    pyyaml>=5.4.0
    pandas>=1.3.0
    Pillow>=8.3.0

packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    black>=21.0
    flake8>=3.9
    mypy>=0.910
    sphinx>=4.0
perception =
    open3d>=0.13.0
    scikit-image>=0.18
    opencv-python>=4.5
mapping =
    scikit-learn>=1.0

[options.entry_points]
console_scripts =
    from-signal-to-system-sim = sim.sim_runner:main
    coverage-analysis = analysis.coverage_analysis:main
    plot-bandwidth = analysis.plot_bandwidth_vs_update_rate:main
    plot-latency = analysis.plot_latency_vs_nav_error:main
